--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </header>
 
     <section id="carros">
-        <h2> Nossos Líderes de Venda</h2>
+        <h2> Nossos Líderes de Venda:</h2>
         <h2 class="Carros">Carros</h2>
         
         <div class="Secao-carros">
@@ -59,7 +59,7 @@
     </section>
 
     <section id="motos">
-        <h2>Nossos Líderes de Venda</h2>
+        <h2>Nossos Líderes de Venda:</h2>
         <h2 class="Mostos">Motos</h2>
 
         <div class="Secao-motos">
